--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,6 @@ insert_final_newline = true
 # C style
 # BSD/Allman
 [*.{c,h}]
-indent_style = tab
+indent_style = space
 indent_size = 4
 max_line_length = 120
