[ADD] Some work on inheritance.

--- a/src/oo_concept/sophisticated/Makefile
+++ b/src/oo_concept/sophisticated/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 CCFLAGS=-O2 -DNDEBUG -std=c11
 
 SRC=
-OBJS=Counter.o oo_main.o
+OBJS=oo_main.o Counter.o SpecialCounter.o
 LIBS=
 EXEC=oo_main
 
@@ -12,7 +12,7 @@ all: $(OBJS) $(EXEC)
 	$(CC) $(CCFLAGS) $(INCLUDES) -c $< 
 	
 oo_main: $(OBJS)
-	$(CC) $(LDFLAGS) -o $@ oo_main.o Counter.o $(LIBS)
+	$(CC) $(LDFLAGS) -o $@ oo_main.o Counter.o SpecialCounter.o $(LIBS)
 
 clean:
 	$(RM) *.o *.so *.a $(EXEC)
